# live2d-py

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LAppModelWrapper.cpp  LICENSE  MANIFEST.in  README.en.md  README.md  config.json  pyproject.toml  report.hit_part.html  setup-universal.py  setup.py  updates.md
.github/ISSUE_TEMPLATE/: bug-反馈.md  (+1 more)
Framework/: CHANGELOG.md  CMakeLists.txt  IPlatformManager.h  L2DBaseModel.cpp  L2DBaseModel.h  L2DExpressionMotion.cpp  L2DExpressionMotion.h  L2DEyeBlink.cpp  L2DEyeBlink.h  L2DMatrix44.cpp  L2DMatrix44.h  L2DModelMatrix.cpp  L2DModelMatrix.h  L2DMotionManager.cpp  L2DMotionManager.h  L2DPhysics.cpp  L2DPhysics.h  L2DPose.cpp  L2DPose.h  L2DTargetPoint.cpp  L2DTargetPoint.h  L2DViewMatrix.cpp  L2DViewMatrix.h  LICENSE.md  README.ja.md  README.md  TRANSLATION.md
Framework/src/: CubismCdiJson.cpp  CubismCdiJson.hpp  CubismJsonHolder.hpp  CubismModelSettingJson.hpp
Framework/src/Effect/: CubismBreath.cpp  CubismBreath.hpp  CubismEyeBlink.hpp  CubismPose.cpp  CubismPose.hpp
Framework/src/Id/: CubismId.hpp  CubismIdManager.hpp
Framework/src/Math/: CubismMath.hpp  CubismMatrix44.hpp  CubismModelMatrix.hpp  CubismTargetPoint.hpp  CubismVector2.hpp  CubismViewMatrix.hpp
Framework/src/Model/: CubismMoc.hpp  CubismModel.hpp  CubismModelUserData.hpp  CubismModelUserDataJson.hpp  CubismUserModel.cpp  CubismUserModel.hpp
Framework/src/Motion/: ACubismMotion.cpp  ACubismMotion.hpp  ACubismMotion.hpp.bak  CubismExpressionMotion.hpp  CubismExpressionMotionManager.cpp  CubismExpressionMotionManager.hpp  CubismMotion.cpp  CubismMotion.hpp  CubismMotionInternal.hpp  CubismMotionJson.cpp  CubismMotionJson.hpp  CubismMotionManager.hpp  CubismMotionQueueEntry.hpp  CubismMotionQueueManager.hpp
Framework/src/Rendering/: CMakeLists.txt
Framework/src/Rendering/Cocos2d/: CMakeLists.txt  CubismCommandBuffer_Cocos2dx.cpp  CubismCommandBuffer_Cocos2dx.hpp  CubismOffscreenSurface_Cocos2dx.cpp  CubismOffscreenSurface_Cocos2dx.hpp  CubismRenderer_Cocos2dx.cpp  CubismRenderer_Cocos2dx.hpp  CubismShader_Cocos2dx.cpp  CubismShader_Cocos2dx.hpp
Framework/src/Rendering/D3D11/: CubismRenderState_D3D11.cpp  CubismRenderState_D3D11.hpp  CubismRenderer_D3D11.cpp  CubismShader_D3D11.cpp
Framework/src/Rendering/D3D9/: CubismRenderState_D3D9.cpp  CubismRenderState_D3D9.hpp  CubismRenderer_D3D9.cpp  CubismShader_D3D9.cpp
Framework/src/Rendering/Metal/: CubismShader_Metal.mm
Framework/src/Rendering/OpenGL/: CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp
Framework/src/Rendering/Vulkan/: CubismClass_Vulkan.cpp  CubismClass_Vulkan.hpp  CubismOffscreenSurface_Vulkan.cpp  CubismRenderer_Vulkan.cpp  CubismRenderer_Vulkan.hpp
Framework/src/Rendering/Vulkan/Shaders/: CMakeLists.txt
Framework/src/Type/: csmMap.hpp  csmString.cpp
Framework/src/Utils/: CubismJson.cpp  CubismJson.hpp
GLFW/: Main.cpp
Glad/: CMakeLists.txt  README.md
Live2D/: README.md
Live2DViewer/: CMakeLists.txt  Live2DView.cpp  Live2DView.hpp  Live2DView.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  logo.rc
Live2DViewer/Translations/: moe_en.ts  moe_ja_JP.ts  moe_zh_CN.ts
Live2DViewer/scene/: Live2DScene.cpp  Live2DScene.hpp
Main/: CMakeLists.txt  Default.hpp  FileManager.cpp  FileManager.h  LAppDefine.h  LAppLive2DManager.cpp  LAppLive2DManager.h  LAppModel.cpp  LAppModel.h  LAppTextureDesc.cpp  LAppTextureDesc.h  LAppWavFileHandler.cpp  LAppWavFileHandler.hpp  Log.cpp  Log.hpp  MatrixManager.cpp  MatrixManager.h  ModelSetting.h  ModelSettingJson.h  MyLive2DAllocator.h  PlatformManager.cpp  PlatformManager.h  insert_code.cmake  main.cpp  patch_1.cmake
Main/live2d/: CMakeLists.txt  Default.hpp  LAppDefine.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.hpp  LAppWavFileHandler.cpp  List.cpp  List.hpp  Log.cpp  Log.hpp  MatrixManager.cpp  MatrixManager.hpp
Main/src/: CMakeLists.txt  HackProperties.h  LAppAllocator.hpp  LAppDefine.cpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  Log.cpp  MatrixManager.cpp  MatrixManager.hpp
Main/src/fine-grained/: Model.cpp  Model.hpp
Resources/: .gitignore
Wrapper/: Live2D.cpp  PyLAppModel.cpp  PyLAppModel.hpp  PyModel.cpp  PyModel.hpp  Python.hpp  gen_model_source.py
cmake/: Android.cmake  Core.cmake  Framework.cmake  GLFW.cmake  Glad.cmake  Glew.cmake  Live2DViewer.cmake  Main.cmake  Wrapper.cmake
example/: __init__.py  live2d  live2d.pyi  main.py  main_glfw.py  main_glut.py  main_pygame.py  main_pyside2.py  main_pyside6.py
examples/: README.md  main_facial_bind.py  main_glfw.py  main_moderngl_qt.py  main_pygame.py  main_pygame_background.py  main_pygame_fine_grained.py  main_pygame_simple.py  main_pygame_three_model.py  main_pyqt5_canvas_opacity.py  main_pyqt5_multi_win.py  main_pyqt6_canvas.py  main_pyqt6_simple.py  main_pyside2.py  main_pyside6.py  main_pyside6_moderngl_qt.py  main_pyside6_simple.py  main_pyside6_test_run.py  main_tkinter.py  requirements.txt  resources.py
glew/: Makefile
live2d-desktop/: README.md  application.py  config.json  main.py  requirements.txt
package/: facial_params.py  main_canvas_opacity.py  main_facial_bind.py  main_facial_bind_mediapipe.py  main_glfw.py  main_lipsync.py  main_moderngl_qt.py  main_pygame.py  main_pygame_background.py  main_pygame_fine_grained.py  main_pygame_simple.py  main_pygame_three_model.py  main_pygame_two_model.py  main_pyqt5.py  main_pyqt5_canvas_opacity.py  main_pyqt5_multi_win.py  main_pyside2.py  main_pyside6.py  main_pyside6_simple.py  main_pyside6_test_run.py  main_tkinter.py  motion_fix.py  performance_test.py  pyqt5_opacity_rotation.py  report.hit_part.html  resouces.py  resources.py  setup.py  test_destroy_renderer.py  test_draw.py  test_draw_interval.py  test_exp_fadeout.py  test_getters.py  test_hit_part.py  test_hit_test.py  test_large_model.py  test_memory_leak.py  test_memory_leak_get_parameter.py  test_motion_stop.py  test_play_motion_sound.py  (+4 more)
(+569 files in other folders)
