[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
dynamic = ["version"]
name = "live2d-py"
dependencies = [
    "pyopengl",
    "pillow",
    "numpy"
]
authors = [
    { name = "Arkueid", email = "thetardis@qq.com" }
]
description = "A non-web Live2D library for Python."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Live2D", "Cubism Live2D", "Cubism SDK", "Cubism SDK for Python"]

[project.urls]
Homepage = "https://github.com/Arkueid/live2d-py"
Documentation = "https://Arkueid.github.io/live2d-py-docs/"
Repository = "https://github.com/Arkueid/live2d-py"
